fix(kit): prevent content overflow in select (#1340)

--- a/projects/kit/components/select/select.style.less
+++ b/projects/kit/components/select/select.style.less
@@ -30,7 +30,6 @@
     display: flex;
     width: 100%;
     align-items: center;
-    overflow: hidden;
 }
 
 .t-primitive-value {
